*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@19988 72102866-910b-0410-8b05-ffd578937521

--- a/Utilities/thumbnailer/ImageThumbnailer/GNUmakefile
+++ b/Utilities/thumbnailer/ImageThumbnailer/GNUmakefile
@@ -11,9 +11,7 @@ OBJCFLAGS += -Wall
 #
 # We are creating a bundle
 #
-ImageThumbnailer_OBJC_FILES = ImageThumbnailer.m \
-                              resize.m \
-                              getpixel.m 
+ImageThumbnailer_OBJC_FILES = ImageThumbnailer.m
 
 ImageThumbnailer_PRINCIPAL_CLASS = ImageThumbnailer
 
