*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@20146 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -70,6 +70,7 @@ Preferences/XTermPref.m \
 Preferences/DefSortOrderPref.m \
 Preferences/IconsPref.m \
 Preferences/HiddenFilesPref.m \
+Preferences/HistoryPref.m \
 Preferences/BrowserViewerPref.m \
 History/History.m \
 Dialogs/Dialogs.m \
