*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@20164 72102866-910b-0410-8b05-ffd578937521

--- a/Finder/FinderInfo.plist
+++ b/Finder/FinderInfo.plist
@@ -1,8 +1,14 @@
 {
     NSIcon = "Finder.tiff";
-    NSRole = "NSNone";
+    NSRole = "Viewer";
     ApplicationDescription = "Finder";
     ApplicationIcon = "Finder.tiff";
     ApplicationName = "Finder";
     ApplicationRelease = "0.7.0";
+    NSTypes = (
+      {
+        NSUnixExtensions = ( "lsf" );
+        NSIcon = "LiveSearchFolder.tiff";
+      }
+    );
 }
