--- a/configure.ac
+++ b/configure.ac
@@ -12,6 +12,7 @@ AC_CHECK_HEADERS(dir.h unistd.h)
 AC_CHECK_FUNCS(getpwnam getpwuid geteuid getlogin)
 
 AC_CONFIG_AUX_DIR([$GNUSTEP_MAKEFILES])
+AC_CONFIG_HEADER([Finder/config.h])
 
 #--------------------------------------------------------------------
 # We need sh
@@ -53,11 +54,32 @@ AC_SUBST(have_pdfkit)
 
 CPPFLAGS="$save_CPPFLAGS"
 
+
+#--------------------------------------------------------------------
+# We need SQLite
+#--------------------------------------------------------------------
+AC_CHECK_HEADERS(asdasdasd.h, have_sqlite=yes, have_sqlite=no)
+if test "$have_sqlite" = yes; then
+  AC_CHECK_LIB(sqlite3, sqlite3_open, have_sqlite=yes, have_sqlite=no)
+fi
+
+if test "$have_sqlite" = yes; then
+  AC_DEFINE_UNQUOTED([SQLITE], [1], [])
+else
+  AC_DEFINE_UNQUOTED([SQLITE], [0], [])
+  AC_MSG_NOTICE([The SQLite library can't be found.])
+  AC_MSG_NOTICE([The live search folders will not be built.])  
+fi
+
+AC_SUBST(have_sqlite)
+
+
 AC_CONFIG_FILES([GNUmakefile \
 									GWorkspace/GNUmakefile \
 									GWorkspace/GWorkspaceInfo.plist \
 									gworkspace.make \
                   Inspector/GNUmakefile \
                   Inspector/InspectorInfo.plist \
-                  Inspector/inspector.make])
+                  Inspector/inspector.make \
+                  Finder/GNUmakefile])
 AC_OUTPUT
