*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@20247 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -58,6 +58,8 @@ FileViewer/GWViewerShelf.m \
 FileViewer/GWViewerSplit.m \
 FileViewer/GWViewerIconsPath.m \
 FileViewer/GWViewerPathsPopUp.m \
+FileAnnotations/FileAnnotationsManager.m \
+FileAnnotations/FileAnnotation.m \
 TShelf/TShelfWin.m \
 TShelf/TShelfView.m \
 TShelf/TShelfViewItem.m \
