--- a/configure.ac
+++ b/configure.ac
@@ -13,6 +13,7 @@ AC_CHECK_FUNCS(getpwnam getpwuid geteuid getlogin)
 
 AC_CONFIG_AUX_DIR([$GNUSTEP_MAKEFILES])
 AC_CONFIG_HEADER([Finder/config.h])
+AC_CONFIG_HEADER([Utilities/ddbd/config.h])
 
 #--------------------------------------------------------------------
 # We need sh
@@ -58,13 +59,14 @@ CPPFLAGS="$save_CPPFLAGS"
 #--------------------------------------------------------------------
 # We need SQLite
 #--------------------------------------------------------------------
-AC_CHECK_HEADERS(asdasdasd.h, have_sqlite=yes, have_sqlite=no)
+AC_CHECK_HEADERS(sqlite3.h, have_sqlite=yes, have_sqlite=no)
 if test "$have_sqlite" = yes; then
   AC_CHECK_LIB(sqlite3, sqlite3_open, have_sqlite=yes, have_sqlite=no)
 fi
 
 if test "$have_sqlite" = yes; then
   AC_DEFINE_UNQUOTED([SQLITE], [1], [])
+  AC_DEFINE_UNQUOTED([HAVE_SQLITE], [], [])
 else
   AC_DEFINE_UNQUOTED([SQLITE], [0], [])
   AC_MSG_NOTICE([The SQLite library can't be found.])
@@ -75,6 +77,7 @@ AC_SUBST(have_sqlite)
 
 
 AC_CONFIG_FILES([GNUmakefile \
+									Utilities/ddbd/GNUmakefile \
 									GWorkspace/GNUmakefile \
 									GWorkspace/GWorkspaceInfo.plist \
 									gworkspace.make \
