--- a/Finder/GNUmakefile.in
+++ b/Finder/GNUmakefile.in
@@ -10,8 +10,7 @@ VERSION = 0.7
 GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 
 ifneq ($(SQLITE),no)
-  SUBPROJECTS = Modules \
-                LiveSearch/lsfd
+  SUBPROJECTS = Modules 
 else 
   SUBPROJECTS = Modules
 endif
