*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@20258 72102866-910b-0410-8b05-ffd578937521

--- a/Finder/GNUmakefile.in
+++ b/Finder/GNUmakefile.in
@@ -40,6 +40,7 @@ Finder_OBJC_FILES = main.m \
                  SearchResults/ResultsTableView.m \
                  SearchResults/ResultsTextCell.m \
                  SearchResults/ResultsPathsView.m \
+                 LiveSearch/LSFolder.m \
                  Dialogs/StartAppWin.m \
                  Functions.m 
 
