*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@20482 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -54,6 +54,7 @@ FileViewer/GWSpatialViewer.m \
 FileViewer/GWViewerWindow.m \
 FileViewer/GWViewerBrowser.m \
 FileViewer/GWViewerIconsView.m \
+FileViewer/GWViewerListView.m \
 FileViewer/GWViewerShelf.m \
 FileViewer/GWViewerSplit.m \
 FileViewer/GWViewerIconsPath.m \
