*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@20486 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -57,6 +57,7 @@ FileViewer/GWViewerIconsView.m \
 FileViewer/GWViewerListView.m \
 FileViewer/GWViewerShelf.m \
 FileViewer/GWViewerSplit.m \
+FileViewer/GWViewerScrollView.m \
 FileViewer/GWViewerIconsPath.m \
 FileViewer/GWViewerPathsPopUp.m \
 FileAnnotations/FileAnnotationsManager.m \
