--- a/Utilities/ddbd/GNUmakefile.in
+++ b/Utilities/ddbd/GNUmakefile.in
@@ -1,7 +1,5 @@
 PACKAGE_NEEDS_CONFIGURE = YES
 
-SQLITE=@have_sqlite@
-
 GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 
 include $(GNUSTEP_MAKEFILES)/common.make
@@ -9,23 +7,9 @@ include $(GNUSTEP_MAKEFILES)/common.make
 # The application to be compiled
 TOOL_NAME = ddbd
 
-# The Objective-C source files to be compiled
-
-ifneq ($(SQLITE),no)
-  ddbd_OBJC_FILES = ddbd.m \
-                SQLite.m \
-                updater.m \
-                functions.m
-else
-  ddbd_OBJC_FILES = ddbd.m \
-                  functions.m
-endif
+ddbd_OBJC_FILES = ddbd.m
 
 ADDITIONAL_TOOL_LIBS += -lgnustep-gui $(SYSTEM_LIBS)
-
-ifneq ($(SQLITE),no)
-  ADDITIONAL_TOOL_LIBS += -lsqlite3
-endif
 
 -include GNUmakefile.preamble
 
