*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@20583 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -51,7 +51,9 @@ GWorkspace.m \
 Desktop/GWDesktopManager.m \
 Desktop/GWDesktopWindow.m \
 Desktop/GWDesktopView.m \
+Desktop/GWDesktopIcon.m \
 Desktop/Dock/Dock.m \
+Desktop/Dock/DockWindow.m \
 Desktop/Dock/DockIcon.m \
 FileViewer/GWViewersManager.m \
 FileViewer/GWViewer.m \
