*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@20585 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/Desktop/XBundles/GNUmakefile
+++ b/GWorkspace/Desktop/XBundles/GNUmakefile
@@ -3,7 +3,7 @@ include $(GNUSTEP_MAKEFILES)/common.make
 
 GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 
-SUBPROJECTS = XDesktopWindow XDockWindow 
+SUBPROJECTS = XDesktopWindow 
 						 
 -include GNUmakefile.preamble
 
