*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@20683 72102866-910b-0410-8b05-ffd578937521

--- a/Tools/GNUmakefile
+++ b/Tools/GNUmakefile
@@ -3,6 +3,7 @@ include $(GNUSTEP_MAKEFILES)/common.make
 SUBPROJECTS = \
         fswatcher \
         searchtool \
+        lsfupdater \
         ddbd \
         thumbnailer \
         wopen 
