*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@20760 72102866-910b-0410-8b05-ffd578937521

--- a/FSNode/GNUmakefile
+++ b/FSNode/GNUmakefile
@@ -34,7 +34,7 @@ FSNode_HEADER_FILES = \
          FSNBrowser.h \
          FSNIcon.h \
          FSNIconsView.h \
-         FSNListView.m 
+         FSNListView.h
         
 FSNode_HAS_RESOURCE_BUNDLE = yes                                          
         
