*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@20763 72102866-910b-0410-8b05-ffd578937521

--- a/Inspector/GNUmakefile.in
+++ b/Inspector/GNUmakefile.in
@@ -33,6 +33,7 @@ Inspector_OBJC_FILES = \
          Attributes.m \
          Contents.m \
          Tools.m \
+         Annotations.m \
          TimeDateView.m \
          Functions.m
 
