--- a/GWorkspace/Finder/Modules/GNUmakefile
+++ b/GWorkspace/Finder/Modules/GNUmakefile
@@ -7,7 +7,8 @@ SUBPROJECTS = \
     FModuleOwner \
     FModuleCrDate \
     FModuleModDate \
-    FModuleContents
+    FModuleContents \
+    FModuleAnnotations
 
 
 -include GNUmakefile.preamble
