*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@20798 72102866-910b-0410-8b05-ffd578937521

--- a/Inspector/ContentViewers/ImageViewer/GNUmakefile
+++ b/Inspector/ContentViewers/ImageViewer/GNUmakefile
@@ -1,6 +1,10 @@
 
 include $(GNUSTEP_MAKEFILES)/common.make
 
+GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
+
+SUBPROJECTS = resizer 
+
 BUNDLE_NAME = ImageViewer
 BUNDLE_EXTENSION = .inspector
 
@@ -11,10 +15,7 @@ OBJCFLAGS += -Wall
 #
 # We are creating a bundle
 #
-ImageViewer_OBJC_FILES = ImageViewer.m \
-                         ImgReader.m \
-                         getpixel.m \
-                         resize.m
+ImageViewer_OBJC_FILES = ImageViewer.m 
 
 ImageViewer_PRINCIPAL_CLASS = ImageViewer
 
@@ -25,6 +26,8 @@ ImageViewer_PRINCIPAL_CLASS = ImageViewer
 ImageViewer_RESOURCE_FILES = InspectorInfo.plist
 
 -include GNUmakefile.preamble
+
+include $(GNUSTEP_MAKEFILES)/aggregate.make
 
 include $(GNUSTEP_MAKEFILES)/bundle.make
 
