--- a/Inspector/configure.ac
+++ b/Inspector/configure.ac
@@ -13,6 +13,22 @@ AC_CHECK_FUNCS(getpwnam getpwuid geteuid getlogin)
 
 AC_CONFIG_AUX_DIR([$GNUSTEP_MAKEFILES])
 AC_CONFIG_HEADER([config.h])
+AC_CONFIG_HEADER([ContentViewers/ImageViewer/resizer/config.h])
+
+#--------------------------------------------------------------------
+# Debug logging
+#--------------------------------------------------------------------
+AC_ARG_ENABLE(debug_log,
+  [  --enable-debug-log  		Enable debug logging],,
+      enable_debug_log=no)
+
+if test "$enable_debug_log" = "no"; then
+ GW_DEBUG_LOG=0
+else
+ GW_DEBUG_LOG=1
+fi
+
+AC_DEFINE_UNQUOTED([GW_DEBUG_LOG], [$GW_DEBUG_LOG], [debug logging])
 
 #--------------------------------------------------------------------
 # We need sh
@@ -35,7 +51,6 @@ if test "x$FILE_PATH" = "xnone"; then
 fi
 
 AC_DEFINE_UNQUOTED([FILEPATH], ["$FILE_PATH"], [Path to file])
-
 
 #--------------------------------------------------------------------
 # We need PDFKit
