*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@21483 72102866-910b-0410-8b05-ffd578937521

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -13,6 +13,7 @@ GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 # subprojects
 #
 SUBPROJECTS = FSNode \
+	      			  DBKit \
 	      			  Tools \
 	      			  Inspector \
 	      			  Operation \
