*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@21670 72102866-910b-0410-8b05-ffd578937521

--- a/Inspector/GNUmakefile.in
+++ b/Inspector/GNUmakefile.in
@@ -32,6 +32,7 @@ Inspector_OBJC_FILES = \
          Contents.m \
          Tools.m \
          Annotations.m \
+         IconView.m \
          TimeDateView.m \
          Functions.m
 
