*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@22122 72102866-910b-0410-8b05-ffd578937521

--- a/FSNode/config.h.in
+++ b/FSNode/config.h.in
@@ -1,9 +1,13 @@
 
 #undef HAVE_GETMNTENT
 
+#undef HAVE_MNTENT_H
+
 #undef HAVE_SYS_MNTENT_H
 
-#undef MNT_MEMB
+#undef MNT_DIR
+#undef MNT_FSNAME
+#undef MNT_FSTYPE
 
 #undef HAVE_GETMNTINFO
 
