--- a/FSNode/configure.ac
+++ b/FSNode/configure.ac
@@ -17,8 +17,16 @@ AC_CHECK_FUNCS(getmntinfo)
 
 AC_CHECK_HEADERS(mntent.h)
 AC_CHECK_HEADERS(sys/mntent.h)
-AC_CHECK_MEMBER(struct mntent.mnt_dir,[AC_DEFINE(MNT_MEMB,mnt_dir,mntent structure member name)],,[#include <mntent.h>])
-AC_CHECK_MEMBER(struct mntent.mnt_mountp,[AC_DEFINE(MNT_MEMB,mnt_mountp,mntent structure member name)],,[#include <sys/mntent.h>])
+
+AC_CHECK_MEMBER(struct mntent.mnt_dir,[AC_DEFINE(MNT_FSNAME,mnt_fsname,mntent structure member name)],,[#include <mntent.h>])
+AC_CHECK_MEMBER(struct mntent.mnt_mountp,[AC_DEFINE(MNT_FSNAME,mnt_special,mntent structure member name)],,[#include <sys/mntent.h>])
+
+AC_CHECK_MEMBER(struct mntent.mnt_dir,[AC_DEFINE(MNT_DIR,mnt_dir,mntent structure member name)],,[#include <mntent.h>])
+AC_CHECK_MEMBER(struct mntent.mnt_mountp,[AC_DEFINE(MNT_DIR,mnt_mountp,mntent structure member name)],,[#include <sys/mntent.h>])
+
+AC_CHECK_MEMBER(struct mntent.mnt_dir,[AC_DEFINE(MNT_FSTYPE,mnt_type,mntent structure member name)],,[#include <mntent.h>])
+AC_CHECK_MEMBER(struct mntent.mnt_mountp,[AC_DEFINE(MNT_FSTYPE,mnt_fstype,mntent structure member name)],,[#include <sys/mntent.h>])
+
 AC_FUNC_GETMNTENT
 
 #--------------------------------------------------------------------
