*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@22244 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -28,6 +28,7 @@ GWorkspace_HAS_RESOURCE_BUNDLE = yes
 #
 ADDITIONAL_GUI_LIBS += -lFSNode
 ADDITIONAL_GUI_LIBS += -lInspector
+ADDITIONAL_GUI_LIBS += -lOperation
 
 GWorkspace_RESOURCE_FILES = \
   Resources/Icons/* \
