--- a/Operation/GNUmakefile
+++ b/Operation/GNUmakefile
@@ -1,18 +1,12 @@
 
-include $(GNUSTEP_MAKEFILES)/common.make
-
-PACKAGE_NAME = Operation
-VERSION = 0.7
-
 GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 
-#
-# MAIN APP
-#
-APP_NAME = Operation
-Operation_PRINCIPAL_CLASS = Operation
-Operation_APPLICATION_ICON=Operation.tiff
+include $(GNUSTEP_MAKEFILES)/common.make
 
+FRAMEWORK_NAME = Operation
+include Version
+
+Operation_PRINCIPAL_CLASS = Operation
 Operation_HAS_RESOURCE_BUNDLE = yes
 
 Operation_RESOURCE_FILES = \
@@ -23,18 +17,18 @@ Operation_LANGUAGES = Resources/English
 
 # The Objective-C source files to be compiled
 
-Operation_OBJC_FILES = main.m \
+Operation_OBJC_FILES = \
                  Operation.m \
                  FileOpInfo.m \
-                 Preferences/OperationPrefs.m \
                  Functions.m 
+
+Operation_HEADER_FILES = \
+         Operation.h 
 						 
 -include GNUmakefile.preamble
 
 -include GNUmakefile.local
 
-include $(GNUSTEP_MAKEFILES)/aggregate.make
-
-include $(GNUSTEP_MAKEFILES)/application.make
+include $(GNUSTEP_MAKEFILES)/framework.make
 
 -include GNUmakefile.postamble
