*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@22245 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -95,6 +95,7 @@ Preferences/HiddenFilesPref.m \
 Preferences/HistoryPref.m \
 Preferences/BrowserViewerPref.m \
 Preferences/VolumesPref.m \
+Preferences/OperationPrefs.m \
 Preferences/DesktopPref.m \
 History/History.m \
 Dialogs/Dialogs.m \
