*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@22338 72102866-910b-0410-8b05-ffd578937521

--- a/DBKit/GNUmakefile
+++ b/DBKit/GNUmakefile
@@ -12,13 +12,15 @@ DBKBTree.m \
 DBKBTreeNode.m \
 DBKFreeNodesPage.m \
 DBKFixLenRecordsFile.m \
-DBKVarLenRecordsFile.m
+DBKVarLenRecordsFile.m \
+DBKPathsTree.m
 
 libDBKit_HEADER_FILES = \
 DBKBTree.h \
 DBKBTreeNode.h \
 DBKFixLenRecordsFile.h \
-DBKVarLenRecordsFile.h
+DBKVarLenRecordsFile.h \
+DBKPathsTree.h
 
 libDBKit_HEADER_FILES_DIR = .
 libDBKit_HEADER_FILES_INSTALL_DIR=DBKit
