--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -54,6 +54,7 @@ GWorkspace_LANGUAGES = Resources/English \
 GWorkspace_OBJC_FILES = main.m \
 GWFunctions.m \
 GWorkspace.m \
+NSWorkspaceApplication.m \
 Desktop/GWDesktopManager.m \
 Desktop/GWDesktopWindow.m \
 Desktop/GWDesktopView.m \
