*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@22357 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -54,7 +54,7 @@ GWorkspace_LANGUAGES = Resources/English \
 GWorkspace_OBJC_FILES = main.m \
 GWFunctions.m \
 GWorkspace.m \
-NSWorkspaceApplication.m \
+WorkspaceApplication.m \
 Desktop/GWDesktopManager.m \
 Desktop/GWDesktopWindow.m \
 Desktop/GWDesktopView.m \
