git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@22582 72102866-910b-0410-8b05-ffd578937521

--- a/Preferences/Indexing/GNUmakefile
+++ b/Preferences/Indexing/GNUmakefile
@@ -10,7 +10,8 @@ MDIndexing_HAS_RESOURCE_BUNDLE = yes
 OBJCFLAGS += -Wall
 
 MDIndexing_OBJC_FILES = \
-MDIndexing.m 
+MDIndexing.m \
+StartAppWin.m
 
 MDIndexing_PRINCIPAL_CLASS = MDIndexing
 
