git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@22589 72102866-910b-0410-8b05-ffd578937521

--- a/Tools/gmds/mdextractor/GNUmakefile.in
+++ b/Tools/gmds/mdextractor/GNUmakefile.in
@@ -12,6 +12,7 @@ mdextractor_OBJC_FILES = mdextractor.m \
                   sqlite.m 
 
 mdextractor_TOOL_LIBS += -lgnustep-gui
+mdextractor_TOOL_LIBS += -lDBKit
 mdextractor_TOOL_LIBS += -lsqlite3
 
 -include GNUmakefile.preamble
