--- a/Inspector/ContentViewers/ImageViewer/resizer/GNUmakefile
+++ b/Inspector/ContentViewers/ImageViewer/resizer/GNUmakefile
@@ -7,9 +7,7 @@ TOOL_NAME = resizer
 
 OBJCFLAGS += -Wall
 
-resizer_OBJC_FILES = Resizer.m \
-                         getpixel.m \
-                         resize.m
+resizer_OBJC_FILES = Resizer.m 
 
 ADDITIONAL_TOOL_LIBS += -lgnustep-gui $(SYSTEM_LIBS)
 
