--- a/Tools/fswatcher/system-specific/fswatcher-linux-2.6/GNUmakefile.in
+++ b/Tools/fswatcher/system-specific/fswatcher-linux-2.6/GNUmakefile.in
@@ -5,10 +5,10 @@ include $(GNUSTEP_MAKEFILES)/common.make
 
 TOOL_NAME = fswatcher
 
-fswatcher_OBJC_FILES = fswatcher.m \
-pathutils.m
+fswatcher_OBJC_FILES = fswatcher.m 
 
 fswatcher_TOOL_LIBS += -laudit
+fswatcher_TOOL_LIBS += -lDBKit
 
 -include GNUmakefile.preamble
 
