git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@22699 72102866-910b-0410-8b05-ffd578937521

--- a/Tools/fswatcher/system-specific/fswatcher-darwin-8/GNUmakefile.in
+++ b/Tools/fswatcher/system-specific/fswatcher-darwin-8/GNUmakefile.in
@@ -6,8 +6,7 @@ include $(GNUSTEP_MAKEFILES)/common.make
 
 TOOL_NAME = fswatcher
 
-fswatcher_OBJC_FILES = fswatcher.m \
-pathutils.m
+fswatcher_OBJC_FILES = fswatcher.m 
 
 fswatcher_TOOL_LIBS += -lDBKit
 
