git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@22704 72102866-910b-0410-8b05-ffd578937521

--- a/Tools/gmds/mdextractor/GNUmakefile.in
+++ b/Tools/gmds/mdextractor/GNUmakefile.in
@@ -9,6 +9,7 @@ Extractors
 TOOL_NAME = mdextractor
 
 mdextractor_OBJC_FILES = mdextractor.m \
+                  updater.m \
                   sqlite.m 
 
 mdextractor_TOOL_LIBS += -lgnustep-gui
