--- a/Tools/ddbd/GNUmakefile.in
+++ b/Tools/ddbd/GNUmakefile.in
@@ -4,24 +4,21 @@ GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 
 include $(GNUSTEP_MAKEFILES)/common.make
 
-SUBPROJECTS = MDModules 
+ADDITIONAL_INCLUDE_DIRS += @ADDITIONAL_INCLUDE_DIRS@
+ADDITIONAL_LIB_DIRS += @ADDITIONAL_LIB_DIRS@
 
-# The application to be compiled
 TOOL_NAME = ddbd
 
-ddbd_OBJC_FILES = ddbd.m \
-DDBPathsManager.m \
-DDBDirsManager.m \
-DDBMDStorage.m
+# The Objective-C source files to be compiled
 
-ddbd_TOOL_LIBS += -lDBKit
+ddbd_OBJC_FILES = ddbd.m \
+sqlite.m
+
 ddbd_TOOL_LIBS += -lgnustep-gui $(SYSTEM_LIBS)
 
 -include GNUmakefile.preamble
 
 -include GNUmakefile.local
-
-include $(GNUSTEP_MAKEFILES)/aggregate.make
 
 include $(GNUSTEP_MAKEFILES)/tool.make
 
