git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@22971 72102866-910b-0410-8b05-ffd578937521

--- a/Tools/gmds/mdextractor/Extractors/GNUmakefile
+++ b/Tools/gmds/mdextractor/Extractors/GNUmakefile
@@ -2,6 +2,7 @@ include $(GNUSTEP_MAKEFILES)/common.make
 
 SUBPROJECTS = \
   TextExtractor \
+  HtmlExtractor \
   JpegExtractor 
   
 -include GNUmakefile.preamble
