git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@23022 72102866-910b-0410-8b05-ffd578937521

--- a/Apps_wrappers/nedit.app/Resources/Info-gnustep.plist
+++ b/Apps_wrappers/nedit.app/Resources/Info-gnustep.plist
@@ -5,7 +5,7 @@
 	XAppWrapper = YES;
   NSTypes = (
     {
-      NSUnixExtensions = ( "txt" );
+      NSUnixExtensions = ( "txt", "text" );
       NSIcon = "FileIcon_txt.tiff";
     },
     {
@@ -13,7 +13,7 @@
       NSIcon = "FileIcon_.c.tiff";
     },
     {
-      NSUnixExtensions = ( "m" );
+      NSUnixExtensions = ( "m", "mm" );
       NSIcon = "FileIcon_.m.tiff";
     },
     {
