git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@23089 72102866-910b-0410-8b05-ffd578937521

--- a/Tools/gmds/gmds/GNUmakefile.in
+++ b/Tools/gmds/gmds/GNUmakefile.in
@@ -2,8 +2,8 @@
 include $(GNUSTEP_MAKEFILES)/common.make
 GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 
-ADDITIONAL_INCLUDE_DIRS += @ADDITIONAL_INCLUDE_DIRS@
-ADDITIONAL_LIB_DIRS += @ADDITIONAL_LIB_DIRS@
+ADDITIONAL_INCLUDE_DIRS += @SQLITE_INCLUDE_DIRS@
+ADDITIONAL_LIB_DIRS += @SQLITE_LIB_DIRS@
         
 TOOL_NAME = gmds
 
