--- a/Tools/gmds/mdextractor/GNUmakefile.in
+++ b/Tools/gmds/mdextractor/GNUmakefile.in
@@ -3,6 +3,9 @@ GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 
 include $(GNUSTEP_MAKEFILES)/common.make
 
+#ADDITIONAL_INCLUDE_DIRS += @SQLITE_INCLUDE_DIRS@
+#ADDITIONAL_LIB_DIRS += @SQLITE_LIB_DIRS@
+
 SUBPROJECTS = Stemmer \
 Extractors
 
