--- a/Tools/gmds/ddbd/GNUmakefile.in
+++ b/Tools/gmds/ddbd/GNUmakefile.in
@@ -1,8 +1,10 @@
-PACKAGE_NEEDS_CONFIGURE = YES
 
 GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
 
 include $(GNUSTEP_MAKEFILES)/common.make
+
+ADDITIONAL_INCLUDE_DIRS += @SQLITE_INCLUDE_DIRS@
+ADDITIONAL_LIB_DIRS += @SQLITE_LIB_DIRS@
 
 TOOL_NAME = ddbd
 
