* Tools/gmds/mdextractor/Extractors: added the OpenOfficeExtractor, text and metadata extractor for OpenOffice (sxw, odt, odp, sxi, ods, sxc, odg, sxd)
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@23120 72102866-910b-0410-8b05-ffd578937521

--- a/Tools/gmds/mdextractor/Extractors/GNUmakefile.in
+++ b/Tools/gmds/mdextractor/Extractors/GNUmakefile.in
@@ -7,11 +7,13 @@ SUBPROJECTS = \
   TextExtractor \
   HtmlExtractor \
   PdfExtractor \
+  OpenOfficeExtractor \
   JpegExtractor 
 else
 SUBPROJECTS = \
   TextExtractor \
   HtmlExtractor \
+  OpenOfficeExtractor \
   JpegExtractor 
 endif
   
