* GWorkspace/TShelf/TShelfWin.m: in -animateShowing and -animateHiding: doesn't use periodic events but NSRunLoop -runUntilDate:.
* GWorkspace/Desktop/Dock/DockIcon.m: better way to detect if we are allowed to umount a volume.

* Tools/gmds/mdextractor/Extractors/AbiwordExtractor: new extractor for abw files. 


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@23139 72102866-910b-0410-8b05-ffd578937521

--- a/Tools/gmds/mdextractor/Extractors/GNUmakefile.in
+++ b/Tools/gmds/mdextractor/Extractors/GNUmakefile.in
@@ -8,12 +8,14 @@ SUBPROJECTS = \
   HtmlExtractor \
   PdfExtractor \
   OpenOfficeExtractor \
+  AbiwordExtractor \
   JpegExtractor 
 else
 SUBPROJECTS = \
   TextExtractor \
   HtmlExtractor \
   OpenOfficeExtractor \
+  AbiwordExtractor \
   JpegExtractor 
 endif
   
