* Tools/gmds/mdextractor/Extractors/XmlExtractor: new extractor.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@23159 72102866-910b-0410-8b05-ffd578937521

--- a/Tools/gmds/mdextractor/Extractors/GNUmakefile.in
+++ b/Tools/gmds/mdextractor/Extractors/GNUmakefile.in
@@ -9,6 +9,7 @@ SUBPROJECTS = \
   PdfExtractor \
   OpenOfficeExtractor \
   AbiwordExtractor \
+  XmlExtractor \
   JpegExtractor 
 else
 SUBPROJECTS = \
@@ -16,6 +17,7 @@ SUBPROJECTS = \
   HtmlExtractor \
   OpenOfficeExtractor \
   AbiwordExtractor \
+  XmlExtractor \
   JpegExtractor 
 endif
   
